# models/accounts.go
@@ -47,25 +47,27 @@ func (city City) Init() City {
 
 type User struct {
 	BaseModel
-	FirstName       string     `json:"first_name" gorm:"type: varchar(255);not null" example:"John"`
-	LastName        string     `json:"last_name" gorm:"type: varchar(255);not null" example:"Doe"`
-	Username        string     `json:"username" gorm:"type: varchar(1000);not null;unique;" example:"john-doe"`
-	Email           string     `json:"email" gorm:"not null;unique;" example:"johndoe@email.com"`
-	Password        string     `json:"-" gorm:"not null"`
-	IsEmailVerified bool       `json:"-" gorm:"default:false"`
-	IsSuperuser     bool       `json:"-" gorm:"default:false"`
-	IsStaff         bool       `json:"-" gorm:"default:false"`
-	TermsAgreement  bool       `json:"-" gorm:"default:false"`
-	AvatarId        *uuid.UUID `json:"-" gorm:"null"`
-	AvatarObj       *File      `json:"-" gorm:"foreignKey:AvatarId;constraint:OnDelete:SET NULL;null;"`
-	Avatar          *string    `json:"avatar" example:"https://img.com"`
-	Access          *string    `gorm:"type:varchar(1000);null;" json:"-"`
-	Refresh         *string    `gorm:"type:varchar(1000);null;" json:"-"`
-	Bio             *string    `gorm:"type:varchar(1000);null;" json:"bio" example:"Software Engineer | Go Fiber Developer"`
-	Dob             *time.Time `gorm:"null;" json:"dob"`
-	CityId          *uuid.UUID `json:"-" gorm:"null"`
-	CityObj         *City      `json:"-" gorm:"foreignKey:CityId;constraint:OnDelete:SET NULL"`
-	City            *string    `json:"city" example:"Lekki"`
+	FirstName             string         `json:"first_name" gorm:"type: varchar(255);not null" example:"John"`
+	LastName              string         `json:"last_name" gorm:"type: varchar(255);not null" example:"Doe"`
+	Username              string         `json:"username" gorm:"type: varchar(1000);not null;unique;" example:"john-doe"`
+	Email                 string         `json:"email" gorm:"not null;unique;" example:"johndoe@email.com"`
+	Password              string         `json:"-" gorm:"not null"`
+	IsEmailVerified       bool           `json:"-" gorm:"default:false"`
+	IsSuperuser           bool           `json:"-" gorm:"default:false"`
+	IsStaff               bool           `json:"-" gorm:"default:false"`
+	TermsAgreement        bool           `json:"-" gorm:"default:false"`
+	AvatarId              *uuid.UUID     `json:"-" gorm:"null"`
+	AvatarObj             *File          `json:"-" gorm:"foreignKey:AvatarId;constraint:OnDelete:SET NULL;null;"`
+	Avatar                *string        `json:"avatar" example:"https://img.com"`
+	Access                *string        `gorm:"type:varchar(1000);null;" json:"-"`
+	Refresh               *string        `gorm:"type:varchar(1000);null;" json:"-"`
+	Bio                   *string        `gorm:"type:varchar(1000);null;" json:"bio" example:"Software Engineer | Go Fiber Developer"`
+	Dob                   *time.Time     `gorm:"null;" json:"dob"`
+	CityId                *uuid.UUID     `json:"-" gorm:"null"`
+	CityObj               *City          `json:"-" gorm:"foreignKey:CityId;constraint:OnDelete:SET NULL"`
+	City                  *string        `json:"city" example:"Lekki"`
+	NotificationsReceived []Notification `json:"-" gorm:"many2many:notification_receivers;"`
+	NotificationsRead     []Notification `json:"-" gorm:"many2many:notification_read_by;"`
 }
 
 func (user User) Init() User {
