# models/profiles.go
@@ -16,17 +16,20 @@ type Friend struct {
 
 type Notification struct {
 	BaseModel
-	SenderID  uuid.UUID                  `gorm:"not null"`
-	Sender    User                       `gorm:"foreignKey:SenderID;constraint:OnDelete:CASCADE"`
+	SenderID  *uuid.UUID                 `gorm:"null"`
+	Sender    *User                      `gorm:"foreignKey:SenderID;constraint:OnDelete:CASCADE"`
+	Receivers []User                     `gorm:"many2many:notification_receivers;"`
 	Ntype     choices.NotificationChoice `gorm:"varchar(50);not null"`
-	PostID    uuid.UUID                  `gorm:"null"`
-	Post      Post                       `gorm:"foreignKey:PostID;constraint:OnDelete:CASCADE"`
-	CommentID uuid.UUID                  `gorm:"null"`
-	Comment   Comment                    `gorm:"foreignKey:CommentID;constraint:OnDelete:CASCADE"`
-	ReplyID   uuid.UUID                  `gorm:"null"`
-	Reply     Reply                      `gorm:"foreignKey:ReplyID;constraint:OnDelete:CASCADE"`
+	Text      *string                    `gorm:"varchar(10000);null;"`
+	PostID    *uuid.UUID                 `gorm:"null"`
+	Post      *Post                      `gorm:"foreignKey:PostID;constraint:OnDelete:CASCADE"`
+	CommentID *uuid.UUID                 `gorm:"null"`
+	Comment   *Comment                   `gorm:"foreignKey:CommentID;constraint:OnDelete:CASCADE"`
+	ReplyID   *uuid.UUID                 `gorm:"null"`
+	Reply     *Reply                     `gorm:"foreignKey:ReplyID;constraint:OnDelete:CASCADE"`
+	ReadBy    []User                     `gorm:"many2many:notification_read_by;"`
 }
 
-func (n Notification) Init (userID uuid.UUID) Notification {
+func (n Notification) Init(userID uuid.UUID) Notification {
 	return n
 }
